Updating code to Forge 2.7.0